--- a/personal/templates/personal/home.html
+++ b/personal/templates/personal/home.html
@@ -3,25 +3,33 @@
 {% block content %}
 <style type="text/css">
 	.my-grid{
-		border: 5px solid black;
+		border: 2px solid black;
+		border-radius: 5px;
+		background-color: white;
 	}
 	.my-grid-item{
-		border: 5px solid blue;
+		border: 1px solid blue;
+		border-radius: 5px;
 	}
 </style>
 
 <!-- Flexbox: https://css-tricks.com/snippets/css/a-guide-to-flexbox/ -->
-<div class="container">
-	<div class="my-grid d-flex flex-row justify-content-between">
+<div class="container " >
+	<div class="my-grid d-flex flex-row justify-content-between shadow-lg">
 	<!-- <div class="my-grid d-flex flex-row justify-content-end"> -->
-		<p class="my-grid-item m-auto">Item</p>
+		<p class="my-grid-item m-auto"><a class="p-2 text-dark" href="{% url 'tic_tac' %}">tic tac toe</a></p>
 		<p class="my-grid-item m-auto">Item</p>
 		<p class="my-grid-item m-auto">Item</p>
 		<p class="my-grid-item m-auto">Item</p>
 		<p class="my-grid-item m-auto">Item</p>
 	</div>
 
-	<div class="my-grid d-flex flex-column mt-4">
+	<div class="my-grid d-flex flex-column mt-4 shadow-lg">
+		<p class="my-grid-item mx-auto my-1 p-1">Item</p>
+		<p class="my-grid-item mx-auto my-1 p-1">Item</p>
+		<p class="my-grid-item mx-auto my-1 p-1">Item</p>
+		<p class="my-grid-item mx-auto my-1 p-1">Item</p>
+		<p class="my-grid-item mx-auto my-1 p-1">Item</p>
 		<p class="my-grid-item mx-auto my-1 p-1">Item</p>
 		<p class="my-grid-item mx-auto my-1 p-1">Item</p>
 		<p class="my-grid-item mx-auto my-1 p-1">Item</p>
