--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
   	<link rel="stylesheet" href="{% static 'cropperjs/dist/cropper.min.css' %}">
 </head>
 
-<body>
+<body style="padding-top: 200px;">
 
 {% include 'snippets/base_css.html' %}
 {% include 'snippets/base_js.html' %}
