--- a/templates/snippets/header.html
+++ b/templates/snippets/header.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <!-- Header -->
-<div class="d-flex flex-column flex-lg-row p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+<div class="fixed-top d-flex flex-column flex-lg-row p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
 
 	<!-- MEDIUM+ SCREENS -->
 	<div class="d-none d-md-flex flex-row my-auto flex-grow-1 align-items-center">
@@ -11,7 +11,7 @@
 		<form class="search-bar justify-content-start" onsubmit="return executeQuery();">
 			<input type="text" class="form-control" name="q" id="id_q_large" placeholder="Search...">
 		</form>
-		<a class="p-2 text-dark" href="{% url 'public_chat' %}">chat</a>
+		
 
 		<div class="d-flex flex-row-reverse flex-grow-1">
 			<nav class="">
